--- a/topics.html
+++ b/topics.html
@@ -9,22 +9,22 @@ background-color:#FFEFD5;
 <body>
 <table border=0>
 <tr>
-	<td><a href="introduction.html" target="display"><img src="C:\WTLPR2\imgs\intro.jpg" title="Introduction to language" height="250" width="250"> </td>
+	<td><a href="introduction.html" target="display"><img src="imgs\intro.jpg" title="Introduction to language" height="250" width="250"> </td>
 </tr>
 <tr>
-	<td><a href="details.html" target="display"><img src="C:\WTLPR2\imgs\hira.png" title="Hiragana" height="250" width="250"> </td>
+	<td><a href="details.html" target="display"><img src="imgs\hira.png" title="Hiragana" height="250" width="250"> </td>
 </tr>
 <tr>
-	<td><a href="details2.html" target="display"><img src="C:\WTLPR2\imgs\katakana.jpg" title="Katakana" height="250" width="250"> </td>
+	<td><a href="details2.html" target="display"><img src="imgs\katakana.jpg" title="Katakana" height="250" width="250"> </td>
 </tr>
 <tr>
-	<td><a href="kanjis.html" target="display"><img src="C:\WTLPR2\imgs\kanji.jpg" title="Kanjis" height="250" width="250"> </td>
+	<td><a href="kanjis.html" target="display"><img src="imgs\kanji.jpg" title="Kanjis" height="250" width="250"> </td>
 </tr>
 <tr>
-	<td><a href="numbers1.html" target="display"><img src="C:\WTLPR2\imgs\numbers.jpg" title="Numbers" height="250" width="250"> </td>
+	<td><a href="numbers1.html" target="display"><img src="imgs\numbers.jpg" title="Numbers" height="250" width="250"> </td>
 </tr>
 <tr>
-	<td><a href="days.html" target="display"><img src="C:\WTLPR2\imgs\days.jpg" title="Days of the Week" height="250" width="250"> </td>
+	<td><a href="days.html" target="display"><img src="imgs\days.jpg" title="Days of the Week" height="250" width="250"> </td>
 </tr>
 </table>
 </body>
