--- a/katakana.html
+++ b/katakana.html
@@ -15,7 +15,7 @@
 </tr>
 <tr>
 	<th class="series">AA</th>
-	<td><img src="imgs\katakana\katakanaImgs\u.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\a.png"></td>
 	<td><img src="imgs\Katakana\katakanaImgs\i.png"></td>
 	<td><img src="imgs\Katakana\katakanaImgs\u.png"></td>
 	<td><img src="imgs\Katakana\katakanaImgs\e.png"></td>
