--- a/katakana.html
+++ b/katakana.html
@@ -16,106 +16,106 @@
 <tr>
 	<th class="series">AA</th>
 	<td><img src="imgs\katakana\katakanaImgs\a.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\i.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\u.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\e.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\o.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\i.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\u.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\e.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\o.png"></td>
 	<td class="chart"></td>
 	<td class="chart"><a href="katakanaStrokes\kataAA.html" target="strokes">SHOW</a></td>
 </tr>
 <tr>
 	<th class="series">KA</th>
-	<td><img src="imgs\Katakana\katakanaImgs\ka.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\ki.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\ku.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\ke.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\ko.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ka.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ki.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ku.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ke.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ko.png"></td>
 	<td></td>
 	<td><a href="katakanaStrokes\kataKA.html" target="strokes">SHOW</a></td>
 </tr>
 <tr>
 	<th class="series">SA</th>
-	<td><img src="imgs\Katakana\katakanaImgs\sa.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\shi.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\su.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\se.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\so.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\sa.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\shi.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\su.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\se.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\so.png"></td>
 	<td></td>
 	<td><a href="katakanaStrokes\kataSA.html" target="strokes">SHOW</a></td>
 </tr>
 <tr>
 	<th class="series">TA</th>
-	<td><img src="imgs\Katakana\katakanaImgs\ta.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\chi.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\tsu.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\te.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\to.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ta.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\chi.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\tsu.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\te.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\to.png"></td>
 	<td></td>
 	<td><a href="katakanaStrokes\kataTA.html" target="strokes">SHOW</a></td>
 </tr>
 <tr>
 	<th class="series">NA</th>
-	<td><img src="imgs\Katakana\katakanaImgs\na.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\ni.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\nu.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\ne.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\no.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\na.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ni.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\nu.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ne.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\no.png"></td>
 	<td></td>
 	<td><a href="katakanaStrokes\kataNA.html" target="strokes">SHOW</a></td>
 </tr>
 <tr>
 	<th class="series">HA</th>
-	<td><img src="imgs\Katakana\katakanaImgs\ha.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\hi.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\fu.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\he.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\ho.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ha.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\hi.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\fu.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\he.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ho.png"></td>
 	<td></td>
 	<td><a href="katakanaStrokes\kataHA.html" target="strokes">SHOW</a></td>
 </tr>
 <tr>
 	<th class="series">MA</th>
-	<td><img src="imgs\Katakana\katakanaImgs\ma.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\mi.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\mu.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\me.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\mo.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ma.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\mi.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\mu.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\me.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\mo.png"></td>
 	<td></td>
 	<td><a href="katakanaStrokes\kataMA.html" target="strokes">SHOW</a></td>
 </tr>
 <tr>
 	<th class="series">YA</th>
-	<td><img src="imgs\Katakana\katakanaImgs\ya.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ya.png"></td>
 	<td></td>
-	<td><img src="imgs\Katakana\katakanaImgs\yu.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\yu.png"></td>
 	<td></td>
-	<td><img src="imgs\Katakana\katakanaImgs\yo.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\yo.png"></td>
 	<td></td>
 	<td><a href="katakanaStrokes\kataYA.html" target="strokes">SHOW</a></td>
 </tr>
 <tr>
 	<th class="series">RA</th>
-	<td><img src="imgs\Katakana\katakanaImgs\ra.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\ri.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\ru.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\re.png"></td>
-	<td><img src="imgs\Katakana\katakanaImgs\ro.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ra.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ri.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ru.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\re.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\ro.png"></td>
 	<td></td>
 	<td><a href="katakanaStrokes\kataRA.html" target="strokes">SHOW</a></td>
 </tr>
 <tr>
 	<th class="series">WA</th>
-	<td><img src="imgs\Katakana\katakanaImgs\wa.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\wa.png"></td>
 	<td></td>
 	<td></td>
 	<td></td>
-	<td><img src="imgs\Katakana\katakanaImgs\wo.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\wo.png"></td>
 	<td></td>
 	<td><a href="katakanaStrokes\kataWA.html" target="strokes">SHOW</a></td>
 </tr>
 <tr>
 	<th class="series">N/M</th>
-	<td><img src="imgs\Katakana\katakanaImgs\na.png"></td>
+	<td><img src="imgs\katakana\katakanaImgs\na.png"></td>
 	<td></td>
 	<td></td>
 	<td></td>
